Fix styles on Safari

--- a/src/components/board/column/card/styles.css
+++ b/src/components/board/column/card/styles.css
@@ -74,6 +74,7 @@
       flex: 1;
       padding: 0;
       text-align: right;
+      text-align-last: right; /* For safari */
       background-color: var(--white);
     }
   }
